--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.url=jdbc:mysql://172.30.31.150:3306/test
 spring.datasource.username=root
 spring.datasource.password=root
 spring.database.driverClassName=com.mysql.jdbc.driver
